# dot_product

./: .bumpversion.cfg  README.md  pyproject.toml  wip-cookiecutter.json
dot_product/: __init__.py
dot_product/cpp_dot_product/: CMakeLists.txt  cpp_dot_product.cpp  cpp_dot_product.md
tests/dot_product/: test_dot_product.py
tests/dot_product/cpp_dot_product/: test_cpp_dot_product.py
